--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -56,13 +56,15 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-
+        <script type="module">
+            import Tags from "https://cdn.jsdelivr.net/npm/bootstrap5-tags@1/tags.min.js";
+            Tags.init("select");
+        </script>
 
 
     <script>
         var mysocket = new MySocket()
         mysocket.connectSocket();
-    
     </script>
 
 
