--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -33,7 +33,7 @@
 <body class="base-layout-body">
     <div id="header"></div>
     <div class="container content">
-        <div id="app"></div>
+        <div id="app" class="flex"></div>
     </div>
     <div class="footercontent">
         <nav class="navbar footer">
@@ -41,6 +41,8 @@
                 Forum made by Laura-Eliise and Keiti</div>
         </nav>
     </div>
+
+    <script src="/static/js/chat.js"></script>
     <!-- Bootstrap Buncle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
