--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -69,7 +69,7 @@
 
     <script>
         var mysocket = new MySocket()
-        mysocket.connectSocket();
+        mysocket.connectSocket("message");
     </script>
 
 
